--- a/style.css
+++ b/style.css
@@ -117,6 +117,14 @@ button#copy:hover {
   background-color: #2DBB85;
 }
 
+#copy1 {
+  margin: 20px auto;
+}
+
+#copy2 {
+  margin: 20px auto;
+}
+
 .checkboxes {
   display: flex;
   align-items: flex-start;
